fix: добавлен NotFoundException, обогащение полей фильма, исправлены статусы и валидация отзывов